# anonymize

./: ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  README_DOCUMENTOS.md  deploy.sh  test_input.txt
src/: audit_report.rs  conflict_resolver.rs  engine.rs  error.rs  lib.rs  main.rs  normalizer.rs  replacement_engine.rs
src/detector/: contract_number.rs  cost_center.rs  credit_card.rs  dni.rs  email.rs  iban.rs  mod.rs  phone.rs  project_code.rs  purchase_order.rs  serial_number.rs  spanish_id.rs  ssn.rs  work_order.rs
src/document_processor/: docx.rs  mod.rs  pdf.rs
src/utils/: checksum.rs  mod.rs
src/web/: handlers.rs  mod.rs
src/web/static/: index.html
