[package]
name = "anonymize"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "2.0.17"
unicode-normalization = "0.1.25"
regex = "1.12.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
zeroize = { version = "1.8", features = ["zeroize_derive"] }
tokio = { version = "1.42", features = ["full"] }
toml = "0.8"