[package]
name = "anonymize"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core dependencies
thiserror = "2.0.17"
unicode-normalization = "0.1.25"
regex = "1.12.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
zeroize = { version = "1.8", features = ["zeroize_derive"] }
toml = "0.8"

# Web server dependencies
tokio = { version = "1.42", features = ["full"] }
axum = { version = "0.7", features = ["multipart"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["fs", "cors"] }

# Document processing
docx-rs = "0.4"
lopdf = "0.32"
pdf-extract = "0.7"